<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.arlas</groupId>
    <artifactId>arlas-tagger-core</artifactId>
    <name>ARLAS Tagger core</name>
    <packaging>jar</packaging>


    <parent>
        <artifactId>arlas-tagger-parent</artifactId>
        <groupId>io.arlas</groupId>
        <version>21.0.1-SNAPSHOT</version>
    </parent>

    <dependencies>
        <!-- ____________________________________________________ -->
        <!-- ARLAS-server -->
        <!-- ____________________________________________________ -->
        <dependency>
            <groupId>io.arlas</groupId>
            <artifactId>arlas-admin</artifactId>
            <version>${arlas-server.version}</version>
        </dependency>

        <!-- ____________________________________________________ -->
        <!-- KAFKA -->
        <!-- ____________________________________________________ -->
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>kafka-clients</artifactId>
            <version>${kafka.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.kafka</groupId>
            <artifactId>connect-json</artifactId>
            <version>${kafka.version}</version>
            <exclusions>
                <exclusion>
                    <artifactId>jackson-databind</artifactId>
                    <groupId>com.fasterxml.jackson.core</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jackson-datatype-jdk8</artifactId>
                    <groupId>com.fasterxml.jackson.datatype</groupId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>